a paragraph somebody could have written in a minute, behind a build and a redeploy
Sixteen of the faults one audit found were "the prompt says nothing about this". Every one was
a sentence, and every one needed an edit, a compile, an image and a deploy, so none of them got
written.

The prompts are data now and the text blocks are their defaults. An override replaces the
built-in ENTIRELY -- no merge, because a prompt half from the code and half from a box is a
prompt nobody can read in one place, which is the failure this whole program is arranged
against. They live beside the results, not in the image: that is the volume every prover, the
supervisor and the dashboard already share, and a prompt that produced a settlement belongs
next to the settlement it produced.

Read on construction, not cached, so an edit lands on the next marker a prover starts rather
than on the next deploy. Nothing in flight changes underneath itself.

/prompts shows all fourteen with the code's version one click away. Per marker, the prompts tab
shows what each agent was actually told when THAT marker was proved -- recoverable from the
trace with nothing new recorded, since asked carries the whole prompt and the task follows a
separator -- and where one has changed since, it says so and offers to prove it again. A
settlement is only as good as the prompt behind it.

That button is the supervisor's own restart, ordered by a person and not counted against the
agent's two: the limit exists because an agent that re-proves without bound turns a systemic
fault into a loop that looks like progress, and somebody who has read the page and pressed a
button is making a decision instead.

Two things the tests hold. A prompt file that cannot be read yields the built-in and never an
empty string -- an agent given no instructions does not fail, it answers something, and a run
of those looks like a run that merely went badly. And collecting the prompts needs no inference
endpoint: the dashboard has none o